# RuetConnect

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  GEMINI.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  temp.md
CampusConnect/: settings.py  urls.py
apps/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/campus/: admin.py  apps.py  forms.py  models.py  permissions.py  signals.py  tests.py  urls.py  views.py  views_members.py
apps/comments/: admin.py  models.py  urls.py  views.py
apps/posts/: admin.py  forms.py  models.py  urls.py  views.py
apps/threads/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/: admin.py  constants.py  forms.py  models.py  signals.py  urls.py  views.py
apps/votes/: models.py  urls.py  views.py
campus/: tests.py  urls.py  views.py
comments/: admin.py  models.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_date_updated_alter_post_slug.py  0004_alter_post_slug.py  0005_alter_post_slug.py
shared/: forms.py  models.py
static/css/: source.css
templates/: base.html  data-form.html
templates/account/: login.html  profile.html  profile_base.html  profile_comments.html  profile_downvoted.html  profile_posts.html  profile_update.html  profile_upvoted.html  signup.html  user_detail.html
templates/accounts/: login.html  logout.html  profile.html  profile_update.html  register.html
templates/campus/: _sidebar_organizations.html  _sidebar_popular_posts.html  _sidebar_recent_posts.html  _sidebar_threads.html  (+13 more)
threads/: models.py  views.py
users/: constants.py  forms.py  models.py  urls.py  views.py
(+96 files in other folders)
