[tool.poetry]
name = "campusconnect"
version = "0.1.0"
description = ""
authors = ["Shafayetul Huda Sadi <shafayet.sadi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.1"
django-widget-tweaks = "^1.5.0"
django-htmx = "^1.17.2"
django-tailwind = "^3.8.0"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
