[project]
name = "ruetconnect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-decouple>=2.1",
    "django-htmx>=1.23.0",
    "django-template-partials>=24.4",
    "django-widget-tweaks>=1.5.0",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "django-tailwind-cli>=4.2.3",
    "flake8>=7.2.0",
    "pytest>=8.3.5",
]
